--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ allow me to leverage my technical expertise.
 
         <div class="section-title">
           <h2>certification</h2>
-          <p>I Got offer letter for summer inntership at IIT Dharbad and i'm third runner up on blinnk codinng hackethon  </div>
+         </div>
 
         <div class="row" data-aos="fade-up">
           <div class="col-lg-12 d-flex justify-content-center">
